--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/swiper": "^6.0.0",
     "esbuild": "^0.19.10",
     "gsap": "^3.12.4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-swiper": "^0.1.5",
     "swiper": "^11.0.5"
   },
